<resources>
    <string name="app_name">EmployeesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Welcome to Employees App</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Buttons -->
    <string name="next">Next</string>
    <string name="add">Add Employee</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="get">Show Employees</string>

    <!-- Input fields-->
    <string name="firstname_input">First Name</string>
    <string name="lastname_input">Last Name</string>
    <string name="age_input">Age</string>
    <string name="gender_input">Select gender:</string>

</resources>
